--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Authentication Server</title>
 </head>
 <body>
-hello world
+Log in page
 </body>
 </html>
