--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Authentication Server</title>
+    <script src="login.js"></script>
 </head>
 <body>
-Log in page
+<form id="loginForm">
+    <label for="username">Username:</label><br>
+    <input type="text" id="username" name="username"><br>
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password"><br>
+    <input type="submit" value="Log in">
+</form>
 </body>
 </html>
