--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Auth</title>
 </head>
 <body>
 
+Hi
+<?php
+            echo "Hello, this is a PHP script!";
+            
+            $host = getenv('DB_HOST');
+            $user = getenv('DB_USER');
+            $pass = getenv('DB_PASS');
+            $db = getenv('DB_NAME');
+
+            $conn = new mysqli($host, $user, $pass, $db);
+
+            if ($conn->connect_error) {
+die("Connection failed: " . $conn->connect_error);
+}
+?>
 </body>
 </html>
