--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,37 @@
 ﻿<!DOCTYPE html>
+
+
+
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <title>Auth</title>
 </head>
 <body>
 
 Hi
+
+
 <?php
-            echo "Hello, this is a PHP script!";
-            
-            $host = getenv('DB_HOST');
-            $user = getenv('DB_USER');
-            $pass = getenv('DB_PASS');
-            $db = getenv('DB_NAME');
+        // Load the environment variables
+        // Note: You need to use a package like vlucas/phpdotenv to load .env variables
+        $host = getenv('DB_HOST');
+        $user = getenv('DB_USER');
+        $pass = getenv('DB_PASS');
+        $db = getenv('DB_NAME');
 
-            $conn = new mysqli($host, $user, $pass, $db);
+        // Create a new mysqli instance
+        $conn = new mysqli($host, $user, $pass, $db);
 
-            if ($conn->connect_error) {
+        // Check the connection
+        if ($conn->connect_error) {
 die("Connection failed: " . $conn->connect_error);
+} else {
+echo "Connected successfully to the database.";
 }
 ?>
+
+
 </body>
 </html>
