--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,4 @@
 ﻿<!DOCTYPE html>
-
-
-
 <html lang="en">
 <head>
     
@@ -12,11 +9,12 @@
 
 Hi
 
-<?php
-    include '/db_connect.php';
-?>
 
+<?php
+    include '/public/db-connect.php';
+?>
 
 
 </body>
 </html>
+
