--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta http-equiv='refresh' content='0; URL=/public/db-connect.php'>
     <meta charset="UTF-8">
     <title>Auth</title>
 </head>
 <body>
 
 Hi
+223w
 
-
-<?php
-    include '/public/db-connect.php';
-?>
 
 
 </body>
