--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv='refresh' content='0; URL=/public/db-connect.php'>
+    <meta http-equiv='refresh' content='0; URL=/db-connect.php'>
     <meta charset="UTF-8">
     <title>Auth</title>
 </head>
