--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0" ;url="/index.php">
+<!--    <meta http-equiv="refresh" content="0" ;url="/index.php">-->
     <meta charset="UTF-8">
     <title>home</title>
 </head>
